--- a/o.n.core/src/org/netbeans/beaninfo/editors/ServiceTypePanel.form
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/ServiceTypePanel.form
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.0" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.1">
   <Properties>
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
       <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
         <EmptyBorder bottom="0" left="12" right="11" top="12"/>
       </Border>
     </Property>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[480, 320]"/>
-    </Property>
   </Properties>
-  <SyntheticProperties>
-  </SyntheticProperties>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout">
     <Property name="verticalGap" type="int" value="2"/>
@@ -22,7 +17,6 @@
       <Properties>
         <Property name="dividerSize" type="int" value="5"/>
       </Properties>
-
       <Events>
         <EventHandler event="componentResized" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="jSplitPane1ComponentResized"/>
       </Events>
@@ -36,14 +30,13 @@
       <SubComponents>
         <Component class="org.openide.explorer.view.ListView" name="listView1">
           <Properties>
-            <Property name="traversalAllowed" type="boolean" value="false"/>
             <Property name="defaultProcessor" type="java.awt.event.ActionListener" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="new java.awt.event.ActionListener() { public void actionPerformed(java.awt.event.ActionEvent e) {} }" type="code"/>
             </Property>
             <Property name="popupAllowed" type="boolean" value="false"/>
             <Property name="selectionMode" type="int" value="1"/>
+            <Property name="traversalAllowed" type="boolean" value="false"/>
           </Properties>
-
           <Events>
             <EventHandler event="componentResized" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="listView1ComponentResized"/>
           </Events>
@@ -64,10 +57,10 @@
     </Container>
     <Component class="javax.swing.JLabel" name="label">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel1"/>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection component="listView1" type="bean"/>
         </Property>
+        <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
